syntax = "proto3";

package pb;

service HelloWorldService {
    rpc SayHello(SayHelloRequest) returns (HelloReply) {}
}

message SayHelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

